# fastapi_basic

./: .env  Makefile  TODO  celery_config.py  config.py  main.py  pyproject.toml
apps/: app.py  deps.py  replit.py  utils.py
models/: __init__.py  categories.py  database.py  products.py
routers/: __init__.py  auth.py  category.py  products.py
schemas/: category.py  products.py
tasks/: send_email123.py
