[tool.poetry]
name = "fastapi-basic"
version = "0.1.0"
description = ""
authors = ["shokhruza <ibodovashakhruza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"
faker = "^30.8.1"
celery = {extras = ["redis"], version = "^5.4.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

